package dev.appkr.demo.tcp.visitor;

public interface Formattable {

  void accept(Formatter formatter);
}
